--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.26.1",
     "connected-react-router": "^6.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
