--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.26.1",
     "connected-react-router": "^6.8.0",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.1.0",
-    "react-scripts": "^5.0.0"
+    "react-redux": "^8.0.2",
+    "react-scripts": "^5.0.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start"
